Sugati/src/objects/Supplier_Payment_Rule__c.object
<CustomObject>
    <description>For None Guarantee Contracts ONLY and Automatically queuing the supplier payment</description>
    <fields>
        <fullName>Percent_Value__c</fullName>
        <inlineHelpText>Is the amount percentage or value?</inlineHelpText>
        <label>Percent / Value</label>
        <picklist>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPR_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPR_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPR_Balance_Due_Date__c</fullName>
        <inlineHelpText>If payment is due on a specific date, insert date here</inlineHelpText>
        <label>Balance Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPR_Balance_Due_Day__c</fullName>
        <inlineHelpText>+/- number of days</inlineHelpText>
        <label>Balance Due Day</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPR_Balance_Due__c</fullName>
        <inlineHelpText>When is the balance due?</inlineHelpText>
        <label>Balance Due</label>
        <picklist>
            <picklistValues>
                <fullName>At Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Month after Serv Date</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Service Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specific Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPR_Confirmation_From_Date__c</fullName>
        <inlineHelpText>Booking Confirmation From Date</inlineHelpText>
        <label>Confirmation From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPR_Confirmation_To_Date__c</fullName>
        <inlineHelpText>Booking Confirmation To Date (inclusive)</inlineHelpText>
        <label>Confirmation To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPR_Deposit_Due_Date__c</fullName>
        <inlineHelpText>Need to pay at a specific date</inlineHelpText>
        <label>Deposit Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPR_Deposit_Due_Day__c</fullName>
        <inlineHelpText>+/- Number of days</inlineHelpText>
        <label>Deposit Due Day</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPR_Deposit_Due__c</fullName>
        <description>When should the payment be made?</description>
        <inlineHelpText>When should the payment be made?</inlineHelpText>
        <label>Deposit Due</label>
        <picklist>
            <picklistValues>
                <fullName>At Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Month of Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specific Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPR_Deposit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is Deposit required for this property for the specific date range?</inlineHelpText>
        <label>Deposit Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPR_Notify__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can we have a &apos;notify accounts&apos; flag (see above) in the payment record. If this is set to yes the system would add this payment to the Accounts Team &apos;tasks&apos; 4 days before the due date i.e. if due 7 days before the service date then it would notify accounts 11 days before.</description>
        <inlineHelpText>When ticked a task will be created for Account Team 4 days before the due date. (Only use if payment is due before the end of a month)</inlineHelpText>
        <label>Notify for Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPR_Notify_for_Balance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When ticked a task will be created for Account Team 4 days before the due date. (Only use if payment is not at the end of a month)</inlineHelpText>
        <label>Notify for Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPR_Rule_Execution_Order__c</fullName>
        <formula>CASE( RecordType.Name, 
      &apos;Deposit&apos;, 1, 
      &apos;Balance&apos;, 2, 
      3
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Execution Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPR_Service_From_Date__c</fullName>
        <inlineHelpText>Service Date Range Start Date</inlineHelpText>
        <label>Service From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPR_Service_To_Date__c</fullName>
        <label>Service To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPR_Supplier_Payment_Due_Type__c</fullName>
        <inlineHelpText>When is the payment due?</inlineHelpText>
        <label>Supplier Payment Due Type</label>
        <picklist>
            <picklistValues>
                <fullName>At Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Month after Serv Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specific Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPR_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>In the future this may be used for none property based rules such as Transfer and Taxi providers etc..</description>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipName>Supplier_Payment_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Supplier Payment Rule</label>
    <nameField>
        <displayFormat>SPR-{0000000000}</displayFormat>
        <label>Supplier Payment Rule No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Payment Rules</pluralLabel>
    <recordTypes>
        <fullName>Balance</fullName>
        <active>true</active>
        <description>Balance</description>
        <label>Balance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deposit</fullName>
        <active>true</active>
        <description>Deposit</description>
        <label>Deposit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Property_Payment_Rule</fullName>
        <active>true</active>
        <label>Property Payment Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supplier_Payment</fullName>
        <active>true</active>
        <description>Payments for Supplier</description>
        <label>Supplier Payment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Ensure_Supplier_Due_Date_Entered</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(SPR_Deposit_Due_Date__c)
&amp;&amp;
ISPICKVAL( SPR_Deposit_Due__c ,&quot;Specific Date&quot;)</errorConditionFormula>
        <errorDisplayField>SPR_Deposit_Due__c</errorDisplayField>
        <errorMessage>When choosing the Deposit Due of Specific Date, please ensure you enter the date for Due Date</errorMessage>
    </validationRules>
</CustomObject>